# trading-bot

./: .flake8  .gitignore  Candlestick_Chart_Visualizer.ipynb  Explore_Levels_Cache.ipynb  Interactive_Trading_Model_Test.ipynb  PPO_LSTM_Feature_Attribution.ipynb  PROJECT_CONTEXT.md  README.md  RL_Trading_Model_Test.ipynb  RL_Trading_Model_Training.ipynb  Simple_Model_Debug.ipynb  Technical_Indicators_Chart_Visualizer.ipynb  VectorBT_Backtest.ipynb  autonomous_trading_guide.py  gpu.ipynb  installed_packages.txt  mypy.ini  pyproject.toml  requirements.organized.txt  requirements.txt
.github/: copilot-instructions.md
backtest_results/: performance_stats.txt
docs/: ml_replay_buffer_and_memory.md
src/: __init__.py  autonomous_trader.py  autonomous_trader_trainer.py  data_pipeline.py  indicator_utils.py  ml_predictor.py  ml_trainer.py  simple_model_trainer.py
src/backtesting/: __init__.py  vectorbt_engine.py
src/core/: __init__.py  normalization_config.py  trading_types.py
src/data_processing/: __init__.py  add_features.py  feature_normalizer.py
src/detection/: __init__.py  bounce_detector.py
src/environments/: __init__.py  broker.py  trade_reward.py  trading_environment.py
src/extraction/: __init__.py  feature_engineer.py  level_extractor.py
src/memory/: __init__.py  trade_memory.py
src/prediction/: __init__.py  callback_coordinator.py  early_stopping.py  predictor.py  progress_tracking_callback.py  reporter.py  rl_predictor.py  trading_metrics_callback.py  (+1 more)
tests/: conftest.py  run_tests.py  test_broker_functional.py  test_broker_unit.py
(+26 files in other folders)
